# evm-indexer

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml  docker-compose.yml
migrations/: 001_create_tables.sql
src/: config.rs  main.rs
src/db/: cache.rs  mod.rs  queries.rs  repo.rs
src/models/: mod.rs
src/process/: event_decoder.rs  mod.rs  processor.rs  reorg.rs
src/record/: mod.rs
src/rpc/: mod.rs
src/scanner/: event.rs  historical.rs  live.rs  mod.rs  subscription.rs
